boltffi_tests/fixtures/negative_scanner/generic_function.rs
#[export]
pub fn make<T>() -> u32 {
    0
}
